--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.19.0",
     "crypto-js": "^4.1.1",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
+    "sequelize": "^6.6.5"
   }
 }
