--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,21 +1,21 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
+    "username": "remina",
+    "password": "Nivea.29",
     "database": "database_development",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": null,
+    "username": "remina",
+    "password": "Nivea.29",
     "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
+    "username": "remina",
+    "password": "Nivea.29",
     "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "mysql"
