--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "crypto-js": "^4.1.1",
