--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "bootstrap": "^5.1.1",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0",
+    "vue": "^3.2.11",
     "vue-router": "^4.0.11",
     "vuex": "^4.0.2"
   },
