--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.29.1",
     "vue": "^3.2.11",
     "vue-router": "^4.0.11",
+    "vue-simple-alert": "^1.1.1",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
