--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,21 +1,21 @@
 {
   "development": {
     "username": "remina",
-    "password": "${process.env.DB_PASS}",
+    "password": "Nivea.29",
     "database": "database_development",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "remina",
-    "password": "${process.env.DB_PASS}",
+    "password": "Nivea.29",
     "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "remina",
-    "password": "${process.env.DB_PASS}",
+    "password": "Nivea.29",
     "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "mysql"
